# tilecap

./: .gitignore  Cargo.toml  Makefile  PKGBUILD  README.md  README_RU.md
.cargo/: config.toml
.github/workflows/: release.yml
gentoo/: tilecap-0.1.0.ebuild
src/: config.rs  main.rs  wayland.rs  x11.rs
tests/: cli.rs
